# race-condition

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  Procfile  README.md  cloudbuild-bootstrap.yaml  conftest.py  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  pyproject.toml  run_spark.sh  tutorial.md
.gemini/: config.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  first-interaction.yml  scorecard.yml
agents/: conftest.py
agents/npc/: __init__.py
agents/planner/: README.md  __init__.py  adk_tools.py  agent.py  callbacks.py  planner_agent_test.py  prompts.py
agents/planner_with_eval/: README.md  __init__.py  adk_tools.py  agent.py  prompts.py  tools.py
agents/planner_with_memory/: README.md  __init__.py  adk_tools.py  agent.py  prompts.py
agents/runner/: README.md  __init__.py  agent.py  constants.py  hydration.py  initialization.py  running.py  waves.py
agents/runner_autopilot/: README.md  __init__.py  agent.py  autopilot.py
agents/simulator/: README.md  __init__.py  agent.py  broadcast.py  collector.py  pre_race_callback.py  tick_callback.py
agents/simulator_with_failure/: README.md  __init__.py  agent.py
agents/tests/: conftest.py  test_a2a_card_integration.py  test_a2a_standardization.py  test_a2ui_utils.py  test_a2ui_validation_tool.py  test_adk_compliance.py  test_agent_dash_token_metrics.py  test_agent_entrypoints.py  test_behavioral_contracts.py  test_communication_plugin.py  test_conftest_env_isolation.py  test_dispatcher.py  test_dispatcher_a2ui.py  test_dispatcher_broadcast.py  test_e2e_simulation.py  test_factory.py  test_gateway_schema.py  test_include_contents.py  test_instruction_delivery.py  test_multi_agent_a2a.py  test_planner_route_skill.py  test_plugins_a2ui.py  test_runner_count_prompts.py  test_runner_physics_calibration.py  test_runner_sim_e2e.py  test_runtime.py  test_serve.py  test_session_lifecycle.py  test_shared_skill_loading.py  test_simdata_integration.py  test_simulation_isolation_e2e.py  test_simulation_plugin.py  test_skill_compliance.py  test_telemetry_robustness.py  test_tool_registration.py  test_traffic_integration.py
agents/utils/: README.md  __init__.py  a2a.py  a2a_dispatch_test.py  a2ui.py  auth.py  auth_test.py  communication.py  communication_plugin.py  communication_test.py  communication_visibility_test.py  config.py  deployment.py  dispatcher.py  dispatcher_multipart_test.py  dispatcher_test.py  env.py  factory.py  global_gemini.py  plugins.py  prompt_builder.py  pruned_session_service.py  pulses.py  redis_pool.py  retry.py  runner_protocol.py  runner_types.py  runtime.py  serve.py  session_manager.py  sim_defaults.py  (+14 more)
docs/: README.md  code-of-conduct.md  contributing.md  gcp-deployment.md  glossary.md  onboarding.md  troubleshooting.md
infra/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: README.md  deploy.sh  deploy_test.sh  teardown.sh
(+594 files in other folders)
